--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twitter-clone",
+  "name": "plitter-clone",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.8.1",
     "@types/node": "20.11.10",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "date-fns": "^3.3.1",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
-    "next": "14.1.0",
+    "eslint-config-next": "13.2.1",
+    "next": "^13.2.4",
+    "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.3.3"
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8",
+    "swr": "^2.2.4",
+    "typescript": "5.3.3",
+    "zustand": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "prisma": "^5.8.1",
+    "tailwindcss": "^3.4.1"
   }
 }
